couple of more changes

--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,11 @@
     margin-left: 30%;
     margin-top: 10%;
 }
+
+.frontpage{
+    text-align: center;
+    margin-top: 4%;
+}
+.frontpagediv{
+    margin: 5%
+}
