--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+html{
+    background-color: whitesmoke;
+}
+
+h1{
+    font-size: 15px;
+}
+h2{
+    font-size: 10px;
+}
 .badstu{
     border: 1px solid black;
     padding: 60px;
@@ -18,3 +28,4 @@
 .frontpagediv{
     margin: 5%
 }
+
